--- a/0x01-Basic_authentication/requirements.txt
+++ b/0x01-Basic_authentication/requirements.txt
@@ -1,5 +1,37 @@
-Flask==1.1.2
+Babel==2.9.1
+bcrypt==3.2.0
+beautifulsoup4==4.10.0
+bs4==0.0.1
+certifi==2021.10.8
+cffi==1.15.0
+chardet==3.0.4
+charset-normalizer==2.0.12
+click==8.1.0
+Flask==2.2.5
+Flask-Babel==2.0.0
 Flask-Cors==3.0.8
-Jinja2==2.11.2
-requests==2.18.4
+greenlet==1.1.2
+idna==2.6
+importlib-metadata==4.11.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+mypy==0.942
+mypy-extensions==0.4.3
+mysql-connector-python==8.0.28
+mysqlclient==2.1.0
+parameterized==0.8.1
+protobuf==3.19.4
 pycodestyle==2.6.0
+pycparser==2.21
+pytz==2022.1
+requests==2.18.4
+six==1.16.0
+soupsieve==2.3.1
+SQLAlchemy==1.4.32
+tomli==2.0.1
+typed-ast==1.5.2
+typing-extensions==4.1.1
+urllib3==1.22
+Werkzeug==2.2.3
+zipp==3.7.0
